After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777157 - qtdemux: seqh buffer not freed after calling qtdemux_parse_svq3_stsd_data()
qtdemux: seqh buffer not freed after calling qtdemux_parse_svq3_stsd_data()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-12 01:53 UTC by armccurdy
Modified: 2017-01-16 17:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
free seqh after calling qtdemux_parse_svq3_stsd_data() (999 bytes, patch)
2017-01-12 01:57 UTC, armccurdy
committed Details | Review

Description armccurdy 2017-01-12 01:53:03 UTC
The seqh buffer allocated in qtdemux_parse_svq3_stsd_data() needs to be freed by the caller after use.
Comment 1 armccurdy 2017-01-12 01:57:45 UTC
Created attachment 343339 [details] [review]
free seqh after calling qtdemux_parse_svq3_stsd_data()
Comment 2 Sebastian Dröge (slomo) 2017-01-12 09:11:06 UTC
commit 29433495d697e4dcb3bc50ff0e0d866acb949890
Author: Andre McCurdy <armccurdy@gmail.com>
Date:   Wed Jan 11 17:53:32 2017 -0800

    qtdemux: free seqh after calling qtdemux_parse_svq3_stsd_data()
    
    The seqh buffer allocated in qtdemux_parse_svq3_stsd_data() needs to
    be freed by the caller after use.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=777157
    
    Signed-off-by: Andre McCurdy <armccurdy@gmail.com>